# ETS2-ATS-Telemetry-Overlay

./: README.md  build.bat  hello.py  pyproject.toml  requirements.txt  setup.py
installer/: run_truckmon.py
truckmon/: __main__.py  common.py  config.py  game.py  gauges.py
